# fastapi-postgres-alembic-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .env.example  .gitignore  docker-compose.production.yml  docker-compose.yml
{{cookiecutter.project_slug}}/.github/workflows/: deploy-production.yml
{{cookiecutter.project_slug}}/backend/: backend.dockerfile
{{cookiecutter.project_slug}}/backend/app/: prestart.sh  pyproject.toml  tests-start.sh
{{cookiecutter.project_slug}}/backend/app/alembic/versions/: 8ffda965b85b_initial.py
{{cookiecutter.project_slug}}/backend/app/app/: __init__.py  backend_pre_start.py  config.py  main.py
{{cookiecutter.project_slug}}/backend/app/app/api/: deps.py  routes.py
{{cookiecutter.project_slug}}/backend/app/app/api/dependencies/: __init__.py  dates.py
{{cookiecutter.project_slug}}/backend/app/app/api/endpoints/: base.py
{{cookiecutter.project_slug}}/backend/app/app/db/: base_class.py  session.py
{{cookiecutter.project_slug}}/backend/app/app/middlewares/: base.py  exceptions.py
{{cookiecutter.project_slug}}/backend/app/app/models/: __init__.py  mixins.py  models_proxy.py  test_model.py
{{cookiecutter.project_slug}}/backend/app/app/resources/: database.py
{{cookiecutter.project_slug}}/backend/app/app/scripts/: playground.py
{{cookiecutter.project_slug}}/backend/app/app/utils/: args_parser.py  base.py  cache.py  elastic.py
{{cookiecutter.project_slug}}/backend/app/scripts/: test.sh
{{cookiecutter.project_slug}}/scripts/: migrate-db.sh  playground.sh
(+1 files in other folders)
